# rag-demo

./: .gitignore  README.md  ingest.py  main.py  mcp_client.py  mcp_server.py  package.json  pyproject.toml  query.py  rag_service.py  server.js
core/: chat.py  chat_server.py  cli_chat.py  openai_localllm.py  tools.py
public/: index.html
